style: Format-Puzzle Shape and TIle-Inital styling

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 	<head>
 		<title>Puzzle test</title>
+		<meta name="viewport" content="width=device-width, initial scale=1">
+		<link rel="stylesheet" href="./CSS/index.css">
+		
+		
 	</head>
+	
 	<body>
 		<!-- Do not edit any html in the body tag -->
 		<figure class="puzzle-figure">
