--- a/puzzle/15puzzle/index.html
+++ b/puzzle/15puzzle/index.html
@@ -8,6 +8,10 @@
 	<body>
 		<!-- Do not edit any html in the body tag -->
 		<figure class="puzzle-figure">
+			<select id="degree" onchange="selectDegree(this)">
+				<option value="3">3 * 3</option>
+				<option value="4">4 * 4</option>
+			</select>
 			<ul class="puzzle">
 				<li class="tile">1</li>
 				<li class="tile">2</li>
@@ -17,6 +21,13 @@
 				<li class="tile">6</li>
 				<li class="tile">7</li>
 				<li class="tile">8</li>
+				<li class="tile">9</li>
+				<li class="tile">10</li>
+				<li class="tile">11</li>
+				<li class="tile">12</li>
+				<li class="tile">13</li>
+				<li class="tile">14</li>
+				<li class="tile">15</li>
 			</ul>
 			<figcaption>A Puzzle</figcaption>
 		</figure>
